# writerclock

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DATA_LICENSE.md  KO_SPEC.md  LICENSE  NOTICE.md  README.md  SECURITY.md  SPEC.md  capacitor.config.json  index.html  manifest.webmanifest  package-lock.json  package.json  robots.txt  sitemap.xml  sw.js  vercel.json
.github/workflows/: android-build.yml  ci.yml  desktop-build.yml  firmware-build.yml  pages.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/junlee122/writerclock/: MainActivity.java
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
assets/: _sample_ko.js  _sample_quotes.js  app.js  style.css
assets/fonts/: OFL.txt
data/: LITERATURE_CLOCK_LICENSE.md  coverage.json  ko_coverage.json  ko_quotes.js  ko_quotes.json  ko_translations.json  quotes.js  quotes.json
data/ko_sources/: B사감과 러브레터.txt  감자.txt  경희.txt  고향 (현진건).txt  광염 소나타.txt  날개.txt  동백꽃.txt  레디메이드 인생.txt  만무방.txt  메밀꽃 필 무렵.txt  무정.txt  물레방아.txt  발가락이 닮았다.txt  배따라기.txt  봄봄.txt  빈처.txt  뽕.txt  상록수.txt  술 권하는 사회.txt  운수 좋은 날.txt  탈출기.txt  태평천하.txt  홍염.txt
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: SOURCE_AUDIT.md  analytics-setup.md
firmware/: CMakeLists.txt  README.md
firmware/data/: glyphs.txt  quotes_min.json
firmware/main/: CMakeLists.txt  main.cpp  net_time.cpp  net_time.h  ui.cpp
firmware/tools/: build_data.py  build_fonts.sh  make_icon.py
scripts/: audit_data.mjs  build_ko_quotes.py  build_quotes.py  build_static_site.mjs  check_android.mjs  check_static.mjs  curate_translation_corpus.mjs  prepare_desktop.mjs  split_translation_corpus.mjs
tests/: app.test.cjs  curation.test.mjs  test_build_ko_quotes.py
