[package]
name = "writerclock"
version = "1.3.0"
description = "Offline WriterClock desktop application"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/junlee122-bot/writerclock"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = ["tray-icon", "image-png"] }

[[bin]]
name = "writerclock"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
